同步未合并仓库

--- a/f2h2h1.github.io/_draft.html
+++ b/f2h2h1.github.io/_draft.html
@@ -4509,7 +4509,7 @@ openbsd-inetd
     # 安装必要的软件
     apt install -y vim &amp;&amp; \
     apt install -y net-tools &amp;&amp; \
-    apt install -y netcat &amp;&amp; \
+    apt install -y netcat-traditional &amp;&amp; \
     apt install -y openbsd-inetd &amp;&amp; \
     apt install -y procps
     # 修改 inetd 的配置，启用相关的协议
