--- a/f2h2h1.github.io/在Windows下安装Magento2.html
+++ b/f2h2h1.github.io/在Windows下安装Magento2.html
@@ -410,6 +410,8 @@
  Magento_Elasticsearch7
  Magento_InventoryElasticsearch
  Magento_OpenSearch
+ 2.4.5 是 Magento_Elasticsearch,Magento_Elasticsearch7,Magento_Elasticsearch6
+ 2.4.6 是 Magento_Elasticsearch,Magento_Elasticsearch7,Magento_OpenSearch
 </code></pre>
 </li>
 <li>比较完整的安装命令，但仅供参考<pre><code> php bin/magento setup:install  \
