--- a/tifa-233.com/关于本博客 & FAQ.html
+++ b/tifa-233.com/关于本博客 & FAQ.html
@@ -8,6 +8,7 @@
 <ul>
 <li>{% post_link drafts 随笔 %}</li>
 <li>{% post_link academic-waste 学术垃圾 %}</li>
+<li>{% post_link cp-template 算法竞赛模板 %}</li>
 </ul>
 <h2>本博客采用的部分非通用记号/名称等</h2>
 <table>
@@ -21,7 +22,7 @@
 <tr>
 <td>$\exists_1$</td>
 <td>存在唯一</td>
-<td>{% post_link setth-01 %}</td>
+<td></td>
 </tr>
 <tr>
 <td>$[a,b]_A$</td>
