--- a/young-lord.github.io/安卓使用 PN532 读写 NFC.html
+++ b/young-lord.github.io/安卓使用 PN532 读写 NFC.html
@@ -179,7 +179,7 @@ Using no SIMD core.
 <p><a href="https://github.com/li0ard/mfdread/tree/master">下载脚本</a>，搞个虚拟环境安装<code>bitstring</code>依赖即可。</p>
 <h2>参考资料</h2>
 <ul>
-<li><a href="https://xuyiyang.com.cn/archives/记一次使用pn532破解半加密门禁卡/">记一次使用pn532破解半加密门禁卡</a></li>
+<li><a href="https://blog.yxyy.top/archives/记一次使用pn532破解半加密门禁卡">记一次使用pn532破解半加密门禁卡</a></li>
 <li><a href="https://blog.imea.me/archive/1474.html">树莓派进行hardnested破解</a></li>
 <li><a href="https://blog.czbix.com/clone-MIFARE-Classic-card.html">Mifare 门禁卡复制</a></li>
 </ul>
