--- a/young-lord.github.io/小米 Mix 2S 修改开机第一屏.html
+++ b/young-lord.github.io/小米 Mix 2S 修改开机第一屏.html
@@ -24,6 +24,8 @@ convert logo1.png logo1.bmp
 mogrify -format bmp *.png
 exiftool *.bmp
 binwalk logo.img
+binwalk --dd='.*' logo.img
+python3 -O -m binwalk # enable binwalk debug mode
 python3 mix2s_logo_modify.py
 </code></pre>
 <div class="license">
