--- a/f2h2h1.github.io/一些开发笔记.html
+++ b/f2h2h1.github.io/一些开发笔记.html
@@ -2114,6 +2114,9 @@ $variable | Get-Member
 </ul>
 &lt;!--
 
+查看硬盘容量
+df -h
+
 修改 root 密码
 sudo passwd
 
@@ -2276,6 +2279,7 @@ demo/src/main/java/com/example/demo/HelloController.java
 下载源码
 下载完后运行这句 git config core.filemode false
 新建auth.json
+    echo '{"github-oauth": {"github.com": "ghp_uvgdfgfwergwe"}}' | json_pp &gt; auth.json
 新建文件夹docker
     新建文件 touch dockerfile-php
     新建文件 touch docker-compose.yml
@@ -2306,6 +2310,13 @@ demo/src/main/java/com/example/demo/HelloController.java
     php bin/magento config:set admin/url/use_custom_path 0
     php bin/magento config:set web/seo/use_rewrites 0
     php bin/magento config:set web/cookie/cookie_domain cloudshell.dev
+
+    php bin/magento config:show web/secure/base_url;
+    php bin/magento config:show web/unsecure/base_url;
+    php bin/magento config:show admin/url/use_custom_path;
+    php bin/magento config:show web/seo/use_rewrites;
+    php bin/magento config:show web/cookie/cookie_domain;
+
 运行构建命令
     rm -rf var/di/* var/generation/* var/cache/* var/page_cache/* var/view_preprocessed/* var/composer_home/cache/*  var/tmp/* &amp;&amp; \
     rm -rf generated/code/* generated/metadata/* pub/static/* ; \
@@ -2314,7 +2325,8 @@ demo/src/main/java/com/example/demo/HelloController.java
     php bin/magento setup:static-content:deploy -f; \
     php bin/magento indexer:reindex; \
     php bin/magento cache:flush; \
-    chown root:root -R /var/www/html/var &amp;&amp; chmod 777 -R /var/www/html/var
+    chown root:root -R /var/www/html/var &amp;&amp; chmod 777 -R /var/www/html/var; \
+    chown root:root -R /var/www/html/pub &amp;&amp; chmod 777 -R /var/www/html/pub;
 修改文件
     app/code/Magento/Backend/App/Area/FrontNameResolver.php isHostBackend 后台不要404
     app/code/Magento/Store/Model/BaseUrlChecker.php execute 前台不要302
@@ -2325,5 +2337,16 @@ demo/src/main/java/com/example/demo/HelloController.java
 
 
 虽然没有redis，但速度并不慢
+
+
+docker run \
+    --name test1 \
+    -it \
+    --rm \
+    -w /root \
+    -v `pwd`:/root \
+    debian:12 /bin/bash
+
+docker exec -it test1 /bin/bash
 
 --&gt;
