--- a/tifa-233.com/数值分析实验 - 函数逼近与曲线拟合.html
+++ b/tifa-233.com/数值分析实验 - 函数逼近与曲线拟合.html
@@ -56,7 +56,7 @@
 </ol>
 <h2>计算公式</h2>
 <ul>
-<li><p>最小二乘法原理 (参见 {% post_link symmetric-bilinear-metric-space-and-system-of-linear-equations %})</p>
+<li><p>最小二乘法原理</p>
 <p>令 $A=(\alpha_0,\alpha_1,\dots,\alpha_n),~\alpha_i\in\mathbb{R}^m,i=1,2,...,n$, 寻找 $AX=B$ 的最小二乘解 $(x_1,x_2,\dots,x_n)^T$ 即为寻找一组实数 $x_1,x_2,\dots,x_n$ 使得</p>
 <p>$$
 \left|B-\sum_{i=1}^nx_i\alpha<em>i\right|^2=\sum</em>{i=1}^n\left(b<em>1-\sum</em>{j=1}^na_{ij}x_j\right)^2\tag{1}
