--- a/tifa-233.com/目录 - 学术垃圾.html
+++ b/tifa-233.com/目录 - 学术垃圾.html
@@ -1,13 +1,11 @@
 <p>版权声明： 本博客所有文章除特别声明外，均采用 BY-NC-SA 许可协议。转载请注明出处！</p>
 <h2><a href="https://github.com/Tiphereth-A/Tiphereth-A.github.io/blob/master/source/_posts/academic-waste.md">仓库源文</a>，<a href="https://tifa-233.com/archives/academic-waste">站点原文</a></h2>
-<p>本篇文章列举了有诸多价值有限/存在潜在问题的博文, 博主不对这些文章内容的正确性做任何担保, 且这些文章可能随时被删除</p>
+<p>本篇目录列举了有诸多价值有限/存在潜在问题的博文, 博主不对这些文章内容的正确性做任何担保, 且这些文章可能随时被删除</p>
 &lt;!-- more --&gt;
 
 <ul>
 <li>{% post_link adaptive-simpson-rule %}</li>
 <li>{% post_link approx-number %}</li>
-<li>{% post_link diffgeo-00 %}</li>
-<li>{% post_link diffgeo-01 %}</li>
 <li>{% post_link graphth-01 %}</li>
 <li>{% post_link graphth-02 %}</li>
 <li>{% post_link matroid %}</li>
@@ -17,10 +15,6 @@
 <li>{% post_link numanaexp-04 %}</li>
 <li>{% post_link numanaexp-05 %}</li>
 <li>{% post_link numanaexp-06 %}</li>
-<li>{% post_link setth-01 %}</li>
-<li>{% post_link setth-03 %}</li>
-<li>{% post_link setth-04 %}</li>
-<li>{% post_link symmetric-bilinear-metric-space-and-system-of-linear-equations %}</li>
 <li>{% post_link thpoker %}</li>
 <li>{% post_link zkw-segment-tree-test %}</li>
 <li>{% post_link zkw-segment-tree %}</li>
