--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 53 个博客、8885 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 53 个博客、8898 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
@@ -123,6 +123,8 @@
 
 <li><a href=babyno.top/%E7%90%83%E4%BC%9A04%E6%B8%B8%E6%88%8F%E9%80%86%E5%90%91-%E5%AD%98%E6%A1%A3%E6%96%87%E4%BB%B6%E8%A7%A3%E6%9E%90.html>2025-01-14 球会04游戏逆向-存档文件解析</a></li>
 
+<li><a href=zsqk.github.io/JS%20%E4%B8%AD%E7%9A%84%E9%93%BE%E5%BC%8F%E8%B0%83%E7%94%A8.html>2025-01-14 JS 中的链式调用</a></li>
+
 <li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E7%8E%AF%E5%A2%83%E6%91%B8%E7%B4%A2%EF%BC%88%E5%9B%9B%EF%BC%89%EF%BC%9Acfg%E3%80%81not.html>2025-01-14 Rust 在线环境摸索（四）：cfg、not</a></li>
 
 <li><a href=codeinchinese.com/%E7%94%A8%E6%97%A5%E8%AF%AD%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E3%80%8C%E6%8A%9A%E5%AD%90%E3%80%8D%E7%BC%96%E5%86%99%E7%8C%9C%E6%95%B0%E5%AD%97.html>2025-01-13 用日语编程语言「抚子」编写猜数字</a></li>
@@ -161,6 +163,8 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202452%20%E5%B9%B4%E5%BA%95%E7%9A%845K.html>2024-12-31 折返点 2452 年底的5K</a></li>
 
+<li><a href=zsqk.github.io/Flutter%20Web%20%E5%BC%80%E5%8F%91%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A1%B9.html>2024-12-31 Flutter Web 开发注意事项</a></li>
+
 <li><a href=hijiangtao.github.io/2024%E5%B9%B4%E7%BB%88%E6%80%BB%E7%BB%93.html>2024-12-31 2024年终总结</a></li>
 
 <li><a href=iphyer.github.io/CS%20%E8%87%AA%E5%AD%A6%E7%BD%91%E7%AB%99.html>2024-12-30 CS 自学网站</a></li>
@@ -177,9 +181,15 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202451%20%E5%86%AC%E8%87%B3%E5%BA%86%E7%A5%9D.html>2024-12-27 折返点 2451 冬至庆祝</a></li>
 
+<li><a href=zsqk.github.io/%E8%BD%AF%E4%BB%B6%E6%9E%B6%E6%9E%84%E4%B8%8E%E5%AE%9E%E9%AA%8C%E8%89%BA%E6%9C%AF.html>2024-12-25 软件架构与实验艺术</a></li>
+
+<li><a href=zsqk.github.io/OpenAI%2012%20Days%20%E6%80%BB%E7%BB%93.html>2024-12-22 OpenAI 12 Days 总结</a></li>
+
 <li><a href=informal.top/Weekly-%2317%20Triton%20Puzzles.html>2024-12-22 Weekly-#17 Triton Puzzles</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E8%AF%AD%E4%B9%89%E7%BA%A0%E5%81%8F%E2%80%94%E2%80%94%E7%BB%86%E8%8A%82%E8%B0%83%E7%A0%94%E7%9A%84%E7%9B%AE%E7%9A%84%E5%92%8C%E6%96%B9%E5%90%91.html>2024-12-20 语义纠偏——细节调研的目的和方向</a></li>
+
+<li><a href=zsqk.github.io/Deno%20%E4%BD%BF%E7%94%A8%E5%AE%9E%E8%B7%B5%E4%B8%8E%E6%80%BB%E7%BB%93.html>2024-12-19 Deno 使用实践与总结</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202450%20Europa%20%E5%92%8C%20%E8%83%A1%E6%A1%83%E5%A4%B9%E5%AD%90.html>2024-12-18 父范学堂 2450 Europa 和 胡桃夹子</a></li>
 
@@ -189,13 +199,21 @@
 
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202449%20%E7%89%99%E9%BD%BF%E5%92%8C%E7%9C%BC%E7%9D%9B.html>2024-12-12 父范学堂 2449 牙齿和眼睛</a></li>
 
+<li><a href=zsqk.github.io/Cursor%20%E4%BD%BF%E7%94%A8%E9%97%AE%E9%A2%98.html>2024-12-12 Cursor 使用问题</a></li>
+
 <li><a href=codeinchinese.com/%E4%BB%A3%E7%A0%81%E5%92%8C%E4%BC%AA%E4%BB%A3%E7%A0%81%E7%9A%84%E6%8E%A5%E8%BF%91%E5%B0%9D%E8%AF%95%E4%B9%8B%E5%8F%96%E5%BD%A2%E5%A3%B0%E5%AD%97.html>2024-12-12 代码和伪代码的接近尝试之取形声字</a></li>
 
 <li><a href=sund.site/%E4%B8%8EAI%E5%8D%8F%E4%BD%9C%E7%BC%96%E7%A8%8B%E2%94%80%E2%94%80%E6%B5%8B%E8%AF%95%E7%AF%87.html>2024-12-11 与AI协作编程──测试篇</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202449%20%E8%80%B3%E6%9C%BA.html>2024-12-11 折返点 2449 耳机</a></li>
 
+<li><a href=zsqk.github.io/%E8%B0%88%20Alex%20Russell%20%E8%B0%88%20React.html>2024-12-11 谈 Alex Russell 谈 React</a></li>
+
+<li><a href=zsqk.github.io/Ionic%20%E9%A2%9C%E8%89%B2.html>2024-12-10 Ionic 颜色</a></li>
+
 <li><a href=jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt%2816%29-%E8%87%AA%E5%8A%A8%E5%B1%9E%E6%80%A7.html>2024-12-09 玩转Qt(16)-自动属性</a></li>
+
+<li><a href=zsqk.github.io/%E5%B8%AE%E5%8A%A9%E8%89%B2%E7%9B%B2%E5%92%8C%E8%89%B2%E5%BC%B1%E4%BD%BF%E7%94%A8%E8%BD%AF%E4%BB%B6.html>2024-12-09 帮助色盲和色弱使用软件</a></li>
 
 <li><a href=qubeijun.github.io/%E8%A8%80%E8%AF%AD%E7%90%86%E8%A7%A3%E4%B8%8E%E8%A1%A8%E8%BE%BE.html>2024-12-08 言语理解与表达</a></li>
 
@@ -213,7 +231,13 @@
 
 <li><a href=kexizeroing.github.io/TIL.html>2024-12-06 TIL</a></li>
 
+<li><a href=zsqk.github.io/Deno%20lint%20%E7%9A%84%E5%B1%80%E9%99%90.html>2024-12-06 Deno lint 的局限</a></li>
+
+<li><a href=zsqk.github.io/React%2019.html>2024-12-06 React 19</a></li>
+
 <li><a href=codeinchinese.com/%E5%BC%80%E5%BF%83%E5%9C%B0%E5%90%AC%E8%AF%B4%E8%AF%BB%E5%86%99%EF%BC%88%E4%B8%80%EF%BC%89.html>2024-12-06 开心地听说读写（一）</a></li>
+
+<li><a href=zsqk.github.io/%E8%A7%84%E5%88%99%E7%9A%84%E6%89%A7%E8%A1%8C%E6%AF%94%E8%A7%84%E5%88%99%E8%AE%BE%E8%AE%A1%E6%98%AF%E5%90%A6%E7%B2%BE%E5%A6%99%E6%9B%B4%E9%87%8D%E8%A6%81.html>2024-12-05 规则的执行比规则设计是否精妙更重要</a></li>
 
 <li><a href=babyno.top/%E8%87%AA%E5%B7%B1%E5%86%99%E4%B8%80%E4%B8%AA%E6%99%BA%E8%83%BD%E4%BD%93-%E7%90%86%E8%AE%BA%E7%AF%87.html>2024-12-04 自己写一个智能体-理论篇</a></li>
 
@@ -228,6 +252,8 @@
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202447%20%E8%B7%9F%E5%AD%A9%E5%AD%90%E4%BB%AC%E4%B8%80%E8%B5%B7%E7%9C%8B%E5%AE%8C%E4%BA%86%E3%80%8A%E5%A3%AB%E5%85%B5%E7%AA%81%E5%87%BB%E3%80%8B.html>2024-11-29 父范学堂 2447 跟孩子们一起看完了《士兵突击》</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202448%20%E6%84%9F%E6%81%A9%E8%8A%82.html>2024-11-29 父范学堂 2448 感恩节</a></li>
+
+<li><a href=zsqk.github.io/%E9%9A%90%E8%97%8F%20SSID%20%28Wi-Fi%20%E5%AE%89%E5%85%A8%E6%80%A7%E5%88%86%E6%9E%90%3A%E9%9A%90%E8%97%8F%20SSID%20%E7%9A%84%E4%BD%9C%E7%94%A8%E4%B8%8E%E5%B1%80%E9%99%90%29.html>2024-11-29 隐藏 SSID (Wi-Fi 安全性分析:隐藏 SSID 的作用与局限)</a></li>
 
 <li><a href=www.cnfeat.com/%E5%8D%A1%E7%89%87%E5%88%9B%E4%BD%9C%E6%A0%87%E5%87%86%E6%B5%81%E6%B0%B4%E7%BA%BF%2001%EF%BC%9A%E5%88%9D%E8%A1%B7.html>2024-11-29 卡片创作标准流水线 01：初衷</a></li>
 
@@ -7447,7 +7473,7 @@
 
 <li><a href=jasonkayzk.github.io/%E8%B4%9F%E8%BD%BD%E5%9D%87%E8%A1%A1Nginx.html>2020-04-13 负载均衡Nginx</a></li>
 
-<li><a href=zsqk.github.io/url-and-http203.html>2020-04-13 url-and-http203</a></li>
+<li><a href=zsqk.github.io/URL%20and%20cross-origin.html>2020-04-13 URL and cross-origin</a></li>
 
 <li><a href=jasonkayzk.github.io/%E8%B4%9F%E8%BD%BD%E5%9D%87%E8%A1%A1%E4%B9%8Bkeepalived.html>2020-04-12 负载均衡之keepalived</a></li>
 
