--- a/zsqk.github.io/司徒正美, 健康.html
+++ b/zsqk.github.io/司徒正美, 健康.html
@@ -6,9 +6,9 @@
 <h2>司徒正美其人</h2>
 <p>网名: 司徒正美 / RubyLouvre</p>
 <p>钟钦成</p>
-<p>从业多年, <a href="https://book.douban.com/subject/27133542/">出过书</a>, 以前在去哪儿, 现在应该<a href="https://www.msdmanuals.com/zh/%E9%A6%96%E9%A1%B5/brain,-spinal-cord,-and-nerve-disorders/spinal-cord-disorders/cervical-spondylosis">已经从 qunar.com 离职</a>,
+<p>从业多年, <a href="https://book.douban.com/subject/27133542/">出过书</a>, 以前在去哪儿, 现在应该<a href="https://github.com/RubyLouvre/anu/commit/86911d21feada7ddacb603654853fc0d3aa522a3#diff-0730bb7c2e8f9ea2438b52e419dd86c9">已经从 qunar.com 离职</a>,
 应该是业内一位人物.</p>
-<p>主要在国内的社群活动, 比如<a href="https://www.msdmanuals.com/zh/home/fundamentals/prevention/tools-of-prevention">博客在 cnblogs</a>. 在知乎也<a href="https://www.zhihu.com/people/si-tu-zheng-mei">有一些回答</a>.
+<p>主要在国内的社群活动, 比如<a href="https://www.cnblogs.com/rubylouvre/">博客在 cnblogs</a>. 在知乎也<a href="https://www.zhihu.com/people/si-tu-zheng-mei">有一些回答</a>.
 也<a href="https://github.com/RubyLouvre">活跃在 GitHub</a>. <a href="https://twitter.com/jslouvre">有 Twitter</a>, 但不怎么用.</p>
 <p>一位坚持写博客 10 年的人, 值得敬佩.</p>
 <p>工作经历<a href="https://www.linkedin.com/in/%E9%92%A6%E6%88%90-%E9%92%9F-735228130/">可以在 LinkedIn 看到</a>. 2013 年来北京, 在去哪儿工作多年.</p>
