--- a/index.html
+++ b/index.html
@@ -6,16 +6,26 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 53 个博客、8934 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 53 个博客、8939 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
 
+<li><a href=mabbs.github.io/%E6%9C%80%E8%BF%91%E5%AF%B9%E5%8D%9A%E5%AE%A2%E6%90%9C%E7%B4%A2%E5%8A%9F%E8%83%BD%E7%9A%84%E4%BC%98%E5%8C%96%E8%AE%B0%E5%BD%95.html>2025-04-04 最近对博客搜索功能的优化记录</a></li>
+
+<li><a href=kneep.github.io/%E6%84%8F%E5%A4%A7%E5%88%A9%E7%94%B3%E6%A0%B9%E7%AD%BE%E8%AF%81%E9%80%9A%E5%85%B3.html>2025-04-04 意大利申根签证通关</a></li>
+
+<li><a href=blog.forecho.com/%E4%BD%BF%E7%94%A8%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%E4%BA%A4%E6%98%93%E7%8A%AF%E7%9A%84%E9%94%99%E8%AF%AF.html>2025-04-03 使用价格行为学交易犯的错误</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202513%20%E5%85%A8%E5%AE%B6%E6%BB%91%E9%9B%AA%20%E6%91%94%E8%B7%A4%E6%AF%94%E6%88%90%E5%8A%9F%E6%9B%B4%E7%8F%8D%E8%B4%B5.html>2025-04-03 父范学堂 2513 全家滑雪 摔跤比成功更珍贵</a></li>
+
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202513%20%E8%AE%AD%E7%BB%83%E7%AC%AC%E5%85%AB%E5%91%A8%20%E9%80%9F%E5%BA%A6%E8%AF%BE%E5%8F%96%E6%B6%88%E4%B8%8E20%E8%8B%B1%E9%87%8C%E8%B7%91%E5%B4%A9%E5%AE%9E%E5%BD%95.html>2025-03-31 折返点 2513 训练第八周 速度课取消与20英里跑崩实录</a></li>
 
 <li><a href=luyuhuang.github.io/Clang%20%E7%BC%96%E8%AF%91%E5%AE%89%E8%A3%85%E6%8C%87%E5%8D%97.html>2025-03-30 Clang 编译安装指南</a></li>
+
+<li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20Always%20In.html>2025-03-29 价格行为学 - Always In</a></li>
 
 <li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20%E5%B8%82%E5%9C%BA%E5%91%A8%E6%9C%9F.html>2025-03-29 价格行为学 - 市场周期</a></li>
 
@@ -53,7 +63,7 @@
 
 <li><a href=codeinchinese.com/%E3%80%8ARule-Based%20%E7%BC%96%E7%A8%8B%E7%9A%84%E5%86%92%E9%99%A9%E3%80%8BCLIPS%E5%85%A5%E9%97%A8%E7%AC%94%E8%AE%B0%EF%BC%88%E4%BA%94%EF%BC%89%EF%BC%9A%E9%87%8D%E6%9E%84%E8%A7%84%E5%88%99.html>2025-03-15 《Rule-Based 编程的冒险》CLIPS入门笔记（五）：重构规则</a></li>
 
-<li><a href=kneep.github.io/%E3%80%90%E5%86%85%E5%AD%98%E6%A8%A1%E5%9E%8B%E3%80%91TSO.html>2025-03-15 【内存模型】TSO</a></li>
+<li><a href=kneep.github.io/%E5%86%85%E5%AD%98%E6%A8%A1%E5%9E%8B%203%EF%BC%9ATSO.html>2025-03-15 内存模型 3：TSO</a></li>
 
 <li><a href=codeinchinese.com/%E3%80%8ARule-Based%20%E7%BC%96%E7%A8%8B%E7%9A%84%E5%86%92%E9%99%A9%E3%80%8BCLIPS%E5%85%A5%E9%97%A8%E7%AC%94%E8%AE%B0%EF%BC%88%E5%9B%9B%EF%BC%89.html>2025-03-14 《Rule-Based 编程的冒险》CLIPS入门笔记（四）</a></li>
 
@@ -953,7 +963,7 @@
 
 <li><a href=qubeijun.github.io/%E7%B3%BB%E7%BB%9F%E6%9E%B6%E6%9E%84%E8%AE%BE%E8%AE%A1%E5%B8%88.html>2024-05-10 系统架构设计师</a></li>
 
-<li><a href=kneep.github.io/%E3%80%90%E5%86%85%E5%AD%98%E6%A8%A1%E5%9E%8B%E3%80%91SC.html>2024-05-10 【内存模型】SC</a></li>
+<li><a href=kneep.github.io/%E5%86%85%E5%AD%98%E6%A8%A1%E5%9E%8B%202%EF%BC%9ASC.html>2024-05-10 内存模型 2：SC</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%9F%BA%E4%BA%8E%E7%8A%B6%E6%80%81%E6%9C%BA%E7%9A%84%E8%A1%8C%E4%B8%BA%E5%AE%9A%E4%B9%89.html>2024-05-08 基于状态机的行为定义</a></li>
 
@@ -965,7 +975,7 @@
 
 <li><a href=jerkwin.github.io/%E5%85%AC%E4%BC%97%E5%8F%B7%E6%96%87%E7%AB%A0%E7%BC%96%E8%BE%91%E6%95%B0%E7%90%86%E5%85%AC%E5%BC%8F.html>2024-05-07 公众号文章编辑数理公式</a></li>
 
-<li><a href=kneep.github.io/%E3%80%90%E5%86%85%E5%AD%98%E6%A8%A1%E5%9E%8B%E3%80%91%E4%BB%80%E4%B9%88%E6%98%AF%E5%86%85%E5%AD%98%E6%A8%A1%E5%9E%8B.html>2024-05-07 【内存模型】什么是内存模型</a></li>
+<li><a href=kneep.github.io/%E5%86%85%E5%AD%98%E6%A8%A1%E5%9E%8B%201%EF%BC%9A%E4%BB%80%E4%B9%88%E6%98%AF%E5%86%85%E5%AD%98%E6%A8%A1%E5%9E%8B.html>2024-05-07 内存模型 1：什么是内存模型</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202418%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%2013%20%E5%91%A8%20%E7%97%85%E4%BA%86.html>2024-05-06 折返点 2418 - 2024 隧道马训练第 13 周 病了</a></li>
 
