--- a/sund.site/Ricoh GR 2 使用心得.html
+++ b/sund.site/Ricoh GR 2 使用心得.html
@@ -1,5 +1,4 @@
 <h2><a href="https://github.com/stevedsun/stevedsun.github.io/blob/master/content/posts/2024/ricoh_gr2_sharing.md">仓库源文</a>，<a href="https://sund.site/posts/2024/ricoh_gr2_sharing">站点原文</a></h2>
-<p><img alt="" src="https://i.imgur.com/XrMKTCC.png"/></p>
 <p>买 GR2 已经很多年了，几年前写过一篇<a href="/posts/2019/ricoh-gr2-settings/">Ricol GR 2 参数说明</a>，作为初学者分享了参数的说明。今天这篇分享一下这几年的使用心得。</p>
 <h2>机内裁剪</h2>
 <p>GR2 作为 28mm 相机，对于普通人扫街来说，最大的痛点就是经常抓不到合适的构图。28mm 的优点是取景范围更大，可以捕捉更多环境信息，但是相对地，用它拍摄时经常混入太多杂乱的场景元素。</p>
@@ -14,6 +13,7 @@
 </ul>
 <h2>自定义参数</h2>
 <h3>FUJI 胶片风格</h3>
+<p><img alt="" src="https://raw.githubusercontent.com/stevedsun/blog-img/main/Pasted%20image%20(3).png"/></p>
 <ul>
 <li>滤镜模式：正片。 饱和度：4、对比度：5、鲜明度：6</li>
 <li>白平衡：复合 AWB</li>
@@ -22,6 +22,7 @@
 </ul>
 <p>上面这套参数模仿富士相机的胶片效果。对比鲜明度较高，有淡淡的绿色调。</p>
 <h3>日常蓝色调</h3>
+<p><img alt="" src="https://raw.githubusercontent.com/stevedsun/blog-img/main/Pasted%20image%20(2).png"/></p>
 <ul>
 <li>滤镜模式：正片。 饱和度：7、对比度：3、鲜明度：7</li>
 <li>白平衡：复合 AWB</li>
@@ -38,6 +39,7 @@
 </ul>
 <p>适合旅行拍摄低对比度的小清新画面。</p>
 <h3>性冷淡</h3>
+<p><img alt="" src="https://raw.githubusercontent.com/stevedsun/blog-img/main/Pasted%20image%20(4).png"/></p>
 <ul>
 <li>滤镜模式：轻微。 饱和度：9、对比度：5、鲜明度：9</li>
 <li>白平衡：CT：4200K</li>
