--- a/blog.forecho.com/价格行为学 - 市场周期.html
+++ b/blog.forecho.com/价格行为学 - 市场周期.html
@@ -1,7 +1,7 @@
 <h2><a href="https://github.com/forecho/hugo-blog/blob/master/content/posts/price-actions-market-cycle.md">仓库源文</a>，<a href="https://blog.forecho.com/price-actions-market-cycle.html">站点原文</a></h2>
 <h2>引言</h2>
 <p>本篇文章重要是总结了 AI Brooks 的价格行为学课程的第 12 章内容。</p>
-<h2>市场周期的结构</h2>
+<h2>市场周期的阶段</h2>
 <p>市场周期分为 4 个阶段：</p>
 <ul>
 <li>突破</li>
@@ -45,7 +45,7 @@
 <ul>
 <li>在更高的时间周期图表中，它是一个突破</li>
 <li>有明显的回调，但是通常都是短暂的，只持续 1~3根 k 线</li>
-<li>在空头行情，k 线低点不是连续的更低，有回调。反之在多头行情，k 线高点不是连续的更高，有回调。</li>
+<li>在空头行情，k 线低点不是连续的更低，有反弹。反之在多头行情，k 线高点不是连续的更高，有回调。</li>
 </ul>
 <p>优点：</p>
 <ul>
@@ -74,7 +74,7 @@
 <li>新手做波段交易，经验丰富的交易者做刮头皮交易（这对于新手来说很难）。</li>
 </ul>
 <h3>宽通道</h3>
-<p><img alt="iV553i" src="https://img.forecho.com/iV553i.png"/></p>
+<p><img alt="6UfDud" src="https://img.forecho.com/6UfDud.png"/></p>
 <p>上图的 k 线，是宽通道的 k 线。我画的红色的线就是回调的 k 线。</p>
 <p>特点：</p>
 <ul>
@@ -103,7 +103,12 @@
 <li>使用三分之一的方式来区分是高位还是低位，高抛低吸，高位卖出，低位买入。</li>
 <li>看左边的行情，新手可以选择跟随左边的行情，如果是上涨的行情，就选择<strong>只在低位买入</strong>，如果是下跌的行情，就选择<strong>只在高位卖出</strong>。</li>
 </ul>
-<h2>市场周期是如何形成的</h2>
+<h2>交易方式</h2>
+<p>我们又可以把市场周期的 4 个阶段分为 2 个交易类型：</p>
+<ul>
+<li>趋势</li>
+<li>震荡</li>
+</ul>
 <h3>趋势</h3>
 <p>趋势要么是突破要么是通道：</p>
 <ul>
@@ -111,7 +116,17 @@
 <li>通道是一个弱趋势</li>
 </ul>
 <h3>震荡区间</h3>
-<p>小到 1 根 k 线，大到 20 根 k 线</p>
-<h3>趋势的周期</h3>
-<p>每个趋势都是从一个突破开始，然后进去通道，再然后进入震荡区间。如此反复。</p>
-<p>未完待续～</p>
+<p>小到 1 根 k 线，大到 20 根 k 线，它的表现是：</p>
+<ul>
+<li>如果你看着 k 线图，然后对市场上发生的事情所感到困惑，或在强势的上涨或下跌之后感到失望，你必须假设市场正处于震荡区间。</li>
+<li>容易大涨大跌，信号 k 很弱，没有跟随趋势。</li>
+</ul>
+<p>更多详情介绍请看 <a href="https://blog.forecho.com/price-actions-trading-range.html">《价格行为学 - 震荡区间》</a> 这篇文章。</p>
+<h3>交易方式</h3>
+<p>每个趋势都是从一个突破开始，然后进去通道，再然后进入震荡区间。如此反复。在趋势行情中我们要跟随趋势交易，在震荡区间中我们要高抛低吸。</p>
+<p>震荡行情比较难做，因为真突破之后可能会导致你大亏，之前小赚的几笔，一次亏完。所以新手要多去做趋势行情，有了经验之后再考虑做震荡行情的剥头皮交易。</p>
+<h2>二元决策</h2>
+<p>我们可以使用二元决策来做交易，当面对行情的时候在 2 个选项中选择一个，迅速根据行情做出决策。</p>
+<p><img alt="057HuF" src="https://img.forecho.com/057HuF.png"/></p>
+<h2>总结</h2>
+<p>市场周期对学习价格行为学非常重要，因为在每个阶段，我们都要使用不同的交易策略，如果你能尽早识别出市场周期，你就能尽早使用正确的交易策略来交易。</p>
