--- a/blog.forecho.com/使用价格行为学交易犯的错误.html
+++ b/blog.forecho.com/使用价格行为学交易犯的错误.html
@@ -4,7 +4,7 @@
 <h2>新手常犯的错误</h2>
 <h3>逆市交易</h3>
 <p>新手总是喜欢逆势操作，因为觉得风险小，只需要设置很低的止损就可以了，但是低止损意味着胜率很低，虽然每次只会亏一点钱，但是积累下来，会亏很多钱。</p>
-<p>这个是课程 14 期，AI Brooks 讲得，看完之后我才明白自己为什么这么喜欢逆市交易了，确实分析的很低，这一个月多月的交易中，我曾在大涨的行情中不断做空，然后不断小亏，最后大亏。当时心里想的是：已经涨这么多了，不可能再继续涨了吧？肯定会跌的，做空赌反转，结果就是亏钱。</p>
+<p>这个是课程 14 期，AI Brooks 讲得，看完之后我才明白自己为什么这么喜欢逆市交易了，确实分析的很低，这一个多月的交易中，我曾在大涨的行情中不断做空，然后不断小亏，最后大亏。当时心里想的是：已经涨这么多了，不可能再继续涨了吧？肯定会跌的，做空赌反转，结果就是亏钱。</p>
 <p>我也曾在大跌的行情中不断做多，然后不断小亏，最后大亏。当时心里想的是：已经跌这么多了，不可能再继续跌了吧？肯定会涨的，做多赌反转，结果就是亏钱。</p>
 <p>自动看完 14 期之后，我每次准备逆市交易的时候，都会想到这个视频，然后就会提醒自己，逆市交易是很难盈利的，因为胜率很低，很容易亏钱。</p>
 &lt;!--more--&gt;
@@ -15,6 +15,7 @@
 <p>有一次大涨的好好的，结果我去洗了个玩，还以为今天会一直涨下去，结果回来一看，中间因为特朗普的一个新闻消息，暴跌了，由于我没有挂止损单，结果利润全没了，甚至还亏钱了。</p>
 <p>还有一次没有及时挂止损单，亏损越来越多，导致后面干脆不止损了，那天后半夜有鲍威尔发言，结果真的 V 了，中途我的期货小账户就差几美元爆仓了，真是幸运的，但是之后的某一天，还是没及时止损，结果真的爆仓了。</p>
 <p>从那之后，我每次下单之后必挂止损单，不能让止损单只停留在脑子里。</p>
+<p>这里要补充一下：一定要挂止损市价单，不要挂止损限价单，因为限价单在突发行情下，不会成交，然后你会造成很大的亏损。</p>
 <h3>没有设置合理的止损</h3>
 <p>AI Brooks 有讲过如何挂止损单，我后面会写一篇关于如何设置止损单的文章。这里只分享一下如果设置不合理的止损会亏很多钱。</p>
 <p>震荡区间，很容易你的止损打掉之后，价格又回来了，如果你没有被止损，那么你是盈利的，导致这种原因就是你害怕风险，没有设置合理的止损。</p>
@@ -36,7 +37,7 @@
 <p>遇到惊吓 k 线，不管三七二十一，我们只能第一时间止损，然后再去找原因都可以。</p>
 <h3>不能及早的识别震荡区间</h3>
 <p>对震荡区间的识别不够早，新手应该避免在震荡区间交易，因为很难赚钱，但是这不意味着你不去学习震荡区间的一些特征。</p>
-<p>只有早点识别出震荡区间，你才能早点离场，避免亏损。</p>
+<p>只有早点识别出震荡区间，你才能使用正确的交易策略。在震旦区间我们要高抛低吸，在突破区间我们要顺势而为。</p>
 <p>另外就是震荡区间会有第二段陷阱，这个我犯过几次错误（新手很容易犯），当时以为突破了，结果只是一个假突破，追上去，然后就亏钱了。</p>
 <h3>情绪化交易</h3>
 <p>有时候小概率事情发生了，止损被打掉之后，不认输，继续按照之前的思路交易，结果导致亏损扩大。</p>
@@ -45,6 +46,18 @@
 <p>这个本质上还是对价格行为学的不熟练，还是使用以前的坏毛病去交易。</p>
 <p>一个长下影线或者长上影线，就以为要反转了，结果之后一部分人获利离场，当你赌反转的时候，行情还在延续。</p>
 <p>AI Brooks 的观点： 80% 的反转都会失败，所以不要去赌反转，除非你已经看到明显的反转信号。</p>
+<h3>避开大事件</h3>
+<p>大事件之前，请避免有持仓，因为这本质上就是赌博，你不知道会发生什么，而且大事件之前，价格会非常波动，很难判断方向，很容易亏钱。要交易请在大事件之后出方向了再交易。</p>
+<p>这里的大事件包括一些数据的发布：</p>
+<ul>
+<li>非农数据、CPI、PPI、GDP 等数据的发布</li>
+<li>美联储利率决议</li>
+<li>美联储主席鲍威尔讲话</li>
+<li>特朗普重要讲话</li>
+</ul>
+<p>不要等他们一开始讲话就入场，要等讲话结束之后，出方向了再交易，我在这里吃过大亏，因为这种突发消息，价格波动非常大，刚开始你以为要涨了，追进去，马上跌了。</p>
+<p>他们刚开始讲了两句利好消息，你追进去，等一下，他们又讲了两句利空消息，又大跌了，你就亏钱了。这种行情很难操作，而且亏起钱来很快，因为波动非常大，5 分钟砸 50个点，5 分钟涨 50个点，非常恐怖。</p>
+<p>所以记得设置好时间/日历提醒，避开大事件持仓。</p>
 <h2>总结</h2>
 <p>以上就是我亲身经历的一些错误，都是钱亏出来的经验，希望对大家有所帮助。</p>
 <p>另外就是 AI Brooks 的价格行为学真是厉害，他的视频课程有 90 多个吧，是非常<strong>完整的一套交易系统</strong>，而且只卖 399 美元，非常良心。之前也买过几千美元的课程，真是的没学到什么有用的。</p>
