--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
     <ol>
 
+<li><a href=sund.site/Friends.html>2025-04-06 Friends</a></li>
+
+<li><a href=sund.site/Steve%20Sun.html>2025-04-06 Steve Sun</a></li>
+
+<li><a href=sund.site/Posts.html>2025-04-06 Posts</a></li>
+
 <li><a href=mabbs.github.io/%E6%9C%80%E8%BF%91%E5%AF%B9%E5%8D%9A%E5%AE%A2%E6%90%9C%E7%B4%A2%E5%8A%9F%E8%83%BD%E7%9A%84%E4%BC%98%E5%8C%96%E8%AE%B0%E5%BD%95.html>2025-04-04 最近对博客搜索功能的优化记录</a></li>
 
 <li><a href=kneep.github.io/%E6%84%8F%E5%A4%A7%E5%88%A9%E7%94%B3%E6%A0%B9%E7%AD%BE%E8%AF%81%E9%80%9A%E5%85%B3.html>2025-04-04 意大利申根签证通关</a></li>
@@ -218,8 +224,6 @@
 <li><a href=conge.livingwithfcs.org/2025%20%E4%B8%80%E6%9C%88%E8%AF%BB%E7%A7%91%E5%AD%A6%E5%8F%B2%20%E5%BF%83%E7%90%86%E5%AD%A6%20%E5%AE%97%E6%95%99%20%E8%82%B2%E5%84%BF%E5%B0%8F%E8%AF%B4%E2%80%A6%E2%80%A6%2011%20%E6%9C%AC.html>2025-02-12 2025 一月读科学史 心理学 宗教 育儿小说…… 11 本</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202506%20%E4%B8%80%E5%9C%BA%E9%9B%AA.html>2025-02-12 父范学堂 2506 一场雪</a></li>
-
-<li><a href=sund.site/%E5%8F%8B%E6%83%85%E9%93%BE%E6%8E%A5.html>2025-02-11 友情链接</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202506%20%E7%97%85.html>2025-02-11 折返点 2506 病</a></li>
 
@@ -7278,8 +7282,6 @@
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20150%20%E5%88%9D%E5%A4%8F%E4%B8%A4%E5%88%99.html>2020-05-12 新爸五年计划 | 150 初夏两则</a></li>
 
 <li><a href=zsqk.github.io/closure.html>2020-05-12 closure</a></li>
-
-<li><a href=sund.site/Hi.html>2020-05-11 Hi</a></li>
 
 <li><a href=ditou.org/2020%E5%B9%B45%E6%9C%88%E7%9A%84%E4%B8%80%E4%BA%9B%E6%84%9F%E6%82%9F.html>2020-05-11 2020年5月的一些感悟</a></li>
 
@@ -14934,8 +14936,6 @@
 <li><a href=www.cnfeat.com/%E8%B4%AB%E5%AF%8C%E5%88%86%E5%8C%96%E7%9A%84%E5%AE%9E%E8%B4%A8.html>2014-10-16 贫富分化的实质</a></li>
 
 <li><a href=www.cnfeat.com/%E5%85%B6%E5%AE%9E%E4%BD%A0%E4%B8%8D%E6%98%AF%E9%9C%80%E8%A6%81%E4%B8%80%E4%BB%BD%E5%B7%A5%E4%BD%9C.html>2014-10-15 其实你不是需要一份工作</a></li>
-
-<li><a href=sund.site/ZooKeeper%20%E5%B8%AE%E5%8A%A9%E6%89%8B%E5%86%8C.html>2014-10-14 ZooKeeper 帮助手册</a></li>
 
 <li><a href=qingbob.com/%E7%A7%BB%E5%8A%A8%E5%BC%80%E5%8F%91%E7%9A%84%E9%82%A3%E4%BA%9B%E4%BA%8B%EF%BC%88%E4%B8%8A%EF%BC%89%EF%BC%9A%E6%B7%B1%E5%85%A5%E6%A6%82%E5%BF%B5.html>2014-10-14 移动开发的那些事（上）：深入概念</a></li>
 
