--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -123,6 +123,7 @@
 <p>Amazing CSS in 2024: <a href="https://nerdy.dev/amazing-css-in-2024">https://nerdy.dev/amazing-css-in-2024</a></p>
 <p>CSS Wrapped 2024: <a href="https://chrome.dev/css-wrapped-2024">https://chrome.dev/css-wrapped-2024</a></p>
 <p>The most hearted Pens of 2024: <a href="https://codepen.io/2024/popular/pens">https://codepen.io/2024/popular/pens</a></p>
+<p>First Look at The Modern attr(): <a href="https://ishadeed.com/article/modern-attr">https://ishadeed.com/article/modern-attr</a></p>
 <hr/>
 <h2>FE dev resources</h2>
 <p>Web Interface Guidelines: <a href="https://github.com/raunofreiberg/interfaces">https://github.com/raunofreiberg/interfaces</a></p>
