--- a/kexizeroing.github.io/JavaScript Observer APIs.html
+++ b/kexizeroing.github.io/JavaScript Observer APIs.html
@@ -74,6 +74,12 @@ export default function AutomaticScroller({ children, className }) {
 <li>The <code>IntersectionObserver</code> for which the callback is being invoked.</li>
 </ol>
 <p>The <code>options</code> object customizes the observer, for exmple, we can set the <code>root</code> or <code>threshold</code> property. If not specified, the observer uses the document's viewport as the root, with no margin, and a 0% threshold.</p>
+<pre><code class="lang-js">const options = {
+  root: null, // The element to use as viewport (null = browser viewport)
+  rootMargin: "0px", // Margin around the root
+  threshold: 0.5, // Percentage of target visibility to trigger callback (0-1)
+};
+</code></pre>
 <p>Then, we call the <code>observe()</code> method on the <code>IntersectionObserver</code> object, telling it to observe intersection changes for the target element (whose visibility within the root is to be monitored.)</p>
 <pre><code class="lang-js">const observer = new IntersectionObserver(entries =&gt; {
   entries.forEach(entry =&gt; {
@@ -112,6 +118,7 @@ images.forEach(image =&gt; observer.observe(image))
   { threshold: [0, 0.25, 0.5, 0.75, 1] }
 )
 </code></pre>
+<p>There is also a <code>rootMargin</code> option, which specifies a set of offsets to add to the root’s bounding box when calculating intersections, effectively shrinking or growing the root. The default is "0px 0px 0px 0px". To give you an example: if you want some code to run before the element is actually in view, <code>rootMargin: "25%"</code> will make the Intersection Observer report an intersection when the observed element is 25% away from the viewport.</p>
 <p>With the help of <code>IntersectionObserver</code> (and tricky usage of <code>top: -1px</code>), we can detect when a sticky element gets pinned.</p>
 <pre><code class="lang-js">const el = document.querySelector(".myElement")
 const observer = new IntersectionObserver( 
