--- a/kneep.github.io/意大利申根签证通关.html
+++ b/kneep.github.io/意大利申根签证通关.html
@@ -1,7 +1,7 @@
 <h2><a href="https://github.com/kneep/kneep.github.io/blob/master/content/posts/italy-2025/visa/index.md">仓库源文</a>，<a href="https://kneep.github.io/posts/italy-2025/visa/">站点原文</a></h2>
 <p>2025 年初的时候，看到芬兰航空暑假上海往返意大利的机票还可以，一时出于激情就买了一家三口的票，没想到签证却成了难题。从第一次出国旅行到现在，没有操心过签证问题，从来都是无脑买机票，然后再研究签证怎么办，能自己办的，从来不找中介，这次差点翻车。本文把签证申请过程中的重要问题记录下来。</p>
-<h2>面签预约</h2>
-<p>如果凭经验，会觉得递交预约不是个问题，通常会在材料准备得七七八八了，再开始研究如何预约。买了机票后，幸好及时网上了解了一下，结论就是——上海领区意大利签证的预约是地狱级的。原因有点难以言说，是从某一年忽然开始收紧的。所以，第一步应该尽快搞定递交签证的预约。预约的方式大致有以下几种：</p>
+<h2>预约递交签证材料</h2>
+<p>如果凭经验，会觉得预约递交材料不是个问题，通常会在材料准备得七七八八了，再开始研究如何预约。买了机票后，幸好及时网上了解了一下，结论就是——上海领区意大利签证的预约是地狱级的。原因也很难搞清楚，是从某一年忽然开始收紧的。所以，第一步应该尽快搞定递交签证的预约。预约的方式大致有以下几种：</p>
 <h3>通过官网预约</h3>
 <p>{{&lt; lead &gt;}}
 基本不可能！
@@ -9,9 +9,9 @@
 <p>不过你还是可以尝试一下。申根签证中国区的管理工作，都是外包给一个叫 VFS Global 的公司。这个公司的网站的水平，比起我儿子学校的主页，高明不了太多。注册账号和预约的网址是：</p>
 <blockquote><p><a href="https://visa.vfsglobal.com/chn/zh/pol/book-an-appointment">https://visa.vfsglobal.com/chn/zh/pol/book-an-appointment</a></p>
 </blockquote>
-<p>江浙沪领区是常年缺号的，我是上海户口，又没法去其他领区递交。你不知道什么时候会放新号，放多少，背后的逻辑是什么。什么都不知道，也问不到。所以，唯一有用的策略可能是，想起来就去刷一下，吃饭的时候、排队的时候、上厕所的时候。这个网站登录非常繁琐，后台响应还慢，而且对每天登录次数居然是有限制的。我大约干了三天就放弃了，但也听说有少数幸运的人能刷到。</p>
+<p>意大利签证必须在户口所在地的领区办理，江浙沪领区是常年缺号的，我是上海户口，又没法去其他领区递交。你不知道什么时候会放新号，放多少，背后的逻辑是什么。什么都不知道，也问不到。所以，唯一有用的策略可能是，想起来就去刷一下，吃饭的时候、排队的时候、上厕所的时候。这个网站登录非常繁琐，后台响应还慢，而且对每天登录次数居然是有限制的。我大约干了三天就放弃了，但也听说有少数幸运的人能刷到。</p>
 <h3>找中介</h3>
-<p>我找几个中介聊过，没想到，他们也是没号，而且似乎他们也是靠卖力气抢号。不管是携程、飞猪，你只要一说上海办意大利签证，一般都告诉你接不了，没号。也有硬着头皮接的，但没个保证，约到了就办，约不到就退款。价格主要看你的出发日，出发日很近的，那价格不是一般贵。</p>
+<p>我找几个中介聊过，没想到，他们也是没号，而且似乎他们也是靠卖力气抢号。不管是携程还是飞猪，你只要一说上海办意大利签证，一般都告诉你接不了，没号。也有零星硬着头皮接的，但没个保证，约到了就办，约不到就退款。价格主要看你的出发日，出发日很近的，那价格不是一般贵。</p>
 <h3>邮件预约快速通道</h3>
 <p>最早听说这条路是在小红书。其实在意大利领事馆主页也是有公告的。发邮件的地址如下：</p>
 <ul>
@@ -20,9 +20,9 @@
 <li>杭州：infohgh.italycn@vfshelpline.com</li>
 </ul>
 <p>发邮件需要提交的核心材料是过去一年的税单，所以我假设他们的审核标准是收入，但具体门槛是多少，当然没人知道。小红书上有很多人说三天两头发邮件，一直是石沉大海。但我一发就成功了。</p>
-<p>邮件很简单，中文写就可以了，不要在遣词造句、翻译上挖空心思，VFS Global 处理事物的都是中国雇员，英文、意大利文写个半吊子，反而添麻烦。如果审核通过了，对方就会告诉你递交材料的时间，你邮件回复确认就可以了。</p>
-<p>同时，对方会询问你是否需要贵宾服务，240/人。贵宾服务和快速通道是两回事，贵宾服务主要的优势就是单独的排队通道，接待的柜台多，排队时间短一点。我没选。实测下来，也快不了多少。</p>
-<p>小朋友因为没有税单，是不能走快速通道的，但处理我预约请求的那位工作人员，帮他预约了同一时间的普通通道，这样全家人就可以一起去了。</p>
+<p>邮件很简单，中文写就可以了，不要在遣词造句、翻译上挖空心思，VFS Global 处理事务的都是中国雇员，英文、意大利文写个半吊子，反而添麻烦。如果审核通过了，对方就会告诉你递交材料的时间，你邮件回复确认就可以了。</p>
+<p>同时，对方会询问你是否需要贵宾服务，240/人。贵宾服务和快速通道是两回事，贵宾服务主要指的是提交材料当天的待遇，主要优势就是单独的排队通道，接待的柜台多，排队时间短一点。我没选。实测下来，也快不了多少。</p>
+<p>小朋友因为没有税单，是不能走快速通道的，但处理我预约请求的那位工作人员也帮他预约了同一时间的号，这样全家人就可以一起去了。</p>
 <p>约好递签时间后，就可以回去准备材料了。</p>
 <h3>曲线救国</h3>
 <p>如果实在没办法，走投无路了，可以考虑办其他国的申根签证。一般的原则是你在哪个国家待的时间最长，就应该申请哪个国家的签证，但因为你的机票进出都在意大利，所以你得编一个符合要求的故事，意大利进出，主要又是游玩别的国家，故事要符合逻辑，路线要实际可操作。一般来说，意大利的两个邻国：法国和瑞士是比较符合的，沿地中海往西就是法国，往北穿过阿尔卑斯山就是瑞士，又以办法签居多。如果一开始就是这么规划的，其实可行性还是很高的。但如果临时去走这条路，还是有不小的风险的。</p>
@@ -34,7 +34,7 @@
 </ol>
 <p>大部分材料没什么特别，办其他国家签证一般也需要，经常出去的人都不在话下。比较特别的有两个地方：</p>
 <h3>亲子关系证明</h3>
-<p>因为未成年人没有收入，所以旅行的费用由父母支付，这是显而易见的。但想不到的是，申根签证真需要我「证明我儿子是我儿子」。逻辑上，证明还需要分两个步骤：</p>
+<p>因为未成年人没有收入，所以旅行的费用由父母支付，这是显而易见的。但想不到的是，申根签证真需要我「证明我儿子是我儿子」。而且逻辑上，证明还需要分两个步骤：</p>
 <ol>
 <li>找一个公证机构，开具公证书，证明「我儿子是我儿子」这件事情是真的，这个一般找区里面的公证处就可以了；</li>
 <li>证明 1 里面的公证书是真的。以前，你需要拿着公证书，同时让中国外交部和意大利使馆认证这份公证书。2023 年，中国加入了《取消外国公文书认证要求的公约》，所以这份亲子关系公证书，只需要办理附加证明书，就可以在意大利使用，这个附加证明书就是「海牙认证」。一般公证机构出了公证书后，可以代你提交海牙认证，你不需要自己跑一趟，代价就是多花点钱。海牙认证的形式，是贴在公证书背面的一张贴纸。</li>
@@ -48,8 +48,9 @@
 <li>千算万算，有一份材料还是失算了，小朋友的材料要求里面有一项是提交父母的银行流水，我想当然地认为，不就是证明有人为他出钱么？提交我的银行流水就足够了，他妈妈的就被我忽略了，准确说，应该是经过思考后故意忽略了。结果到了现场要求我补，他妈妈的银行流水又特别长，因为各种鸡零狗碎的网购，买了退，退了买，长达三十几页。现场复印每张一块钱。</li>
 </ol>
 <h2>递交材料</h2>
+<p>签证材料需要每个人亲自到现场提交，包括孩子。</p>
 <p>上海的签证中心在久事商务大厦，很多国家都签证中心都在这里，密密麻麻。开车前往的话，车可以停在附近的「大丸百货」，车位挺多的，十块钱一个小时，是附近最划算的停车场了。步行到目的地十分钟左右。</p>
-<p>到了那里就发现，其实贵宾通道本质就是多开几个柜台，单独叫号，确实要快一点，但也快不了太多。</p>
-<p>整个过程还是挺快的，两个小时办完。贵宾通道的填表费好像一定要交，哪怕你在家填好了带过来。其他费用好像都不需要，你如果自己来取回护照的话，快递费也不需要交。VFS Global 是个服务公司，他们会引导你一些收费项。觉得不合理的地方，随时问，随时提出异议，不用像跟领事馆沟通那么谨慎。</p>
+<p>到了那里就发现，其实贵宾通道本质就是多开几个柜台，单独叫号，其他的福利可以忽略不计。普通通道，只有两三个柜台，速度慢，但似乎人也不算特别多。实测贵宾确实要快一点，但也快不了太多。</p>
+<p>整个过程还是挺快的，一个半小时办完。贵宾通道的填表费好像一定要交，哪怕你在家填好了带过来。其他费用好像都不需要，你如果自己来取回护照的话，快递费也不需要交。VFS Global 是个服务公司，他们会引导你接受一些收费项。觉得不合理的地方，随时问，随时提出异议，不用像跟领事馆沟通那么谨慎。</p>
 <h2>下签</h2>
-<p>签证处理还是很快的，号称十五天，实际一个星期护照就送回了。不出意外，第一次申请肯定给的是单次签证，但没想到有效期只有一个月，逗留时间只比机票时间多了两天，这实在太抠门了。</p>
+<p>签证处理还是很快的，号称十五天，实际一个星期护照就送回了。不出意外，第一次申请肯定给的是单次签，但没想到有效期只有一个月，更没想到逗留时间只比机票时间多了两天，这实在很无语。</p>
